# multimodal

./: .gitignore  CLAUDE.md  DOCKER_MANAGER_README.md  MultiModalStore.py  README.md  addFlickrToMilvus.py  addFlickrToMilvus_FAKE.py  clip_embed.py  doc_wit_vector_store.py  docker-compose.yml  docker-manager.sh  initalize.py  pyproject.toml  split_dataset.py  test_llava.py  upload_jpg_to_minio.py  view_clip_embed.py  view_dataset.py
.cursor/rules/: nice-korean.mdc
mramg_proj/: BGEM3Embedder.py  DocWitConfig.py  DocWitVectorStore.py  DocumentProcessor.py  JPGUploader.py  MilvusManager.py  WitImagesStorageConfig.py  bge_m3_embedder.py  doc_vector_store.py  doc_vector_store_config.py  doc_wit_config.py  doc_wit_vector_store.py  document_processor.py  images_storage_config.py  jpg_uploader.py  milvus_manager.py  wit_images_storage_config.py
mramg_proj/models/: __init__.py  milvus_search_result.py
mramg_proj/script/: drop_collection.py  test_wit_search.py  text_vectorize_insert.py  upload_jpg_to_minio.py  wit_text_vectorize.py
ragas_eval/: context_recall_evaluator.py  dataset_utils.py  evaluate_context_and_visual_recall.py  evaluate_context_recall.py  retrieval_utils.py  retrieved_contexts_result.py  sample_image_ids.py  test_sample.py  visual_recall_evaluator.py  visualize_context_recall_test.py
ragas_eval/models/: mqa.py  (+4 more)
repository/: JPGUploader.py  MultiModalStore.py  RepositoryConfig.py  TextEmbeddingModal.py  upload_jpg_to_minio.py
testbed/: addFlickrToMilvus.py  demo_rag.py  jina.py  rag_langchain.py  view_clip_embed.py  view_flickr30k_dataset.py
(+3 files in other folders)
