[project]
name = "multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "datasets>=4.0.0",
    "pymilvus>=2.6.0",
    "transformers[torch]>=4.55.3",
    "pillow>=11.3.0",
    "matplotlib>=3.10.5",
    "torchvision>=0.23.0",
    "minio>=7.2.16",
    "tqdm>=4.67.1",
    "bitsandbytes>=0.47.0",
    "langchain>=0.3.27",
]
